--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -19,7 +19,15 @@
 }
 
 .btn-secondary{
-
+    height: 64px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 5px;
+    border-color: #FD6E0A;
+    padding: 18px 35px;
+    background-color: #ffffff;
+    color: #FD6E0A;
+    margin-left: 30px;
 }
 
 .header{
